--- a/src/global.css
+++ b/src/global.css
@@ -116,3 +116,9 @@
   color-scheme: light;
   background: #fff;
 }
+html, body {
+  overflow-x: hidden; /* Yon tomonga siljishni taqiqlaydi */
+  max-width: 100vw;
+  margin: 0;
+  padding: 0;
+}
